--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,11 @@
 {
-  "name": "core",
-  "version": "0.9.0",
+  "name": "parks",
+  "version": "0.1.0",
   "dependencies": {
-    "bootstrap-sass": "twbs/bootstrap-sass#3.2.0",
-    "jquery": "1.11.0",
-    "modernizr": "2.7.2",
-    "respond": "1.4.2",
-    "html5shiv": "3.7.0",
+    "bootstrap": "3.2.0",
+    "jquery": "2.1.1",
     "qunit": "1.4.0",
     "fontawesome": "4.1.0",
-    "media-match": "2.0.2",
-    "select2": "3.5.0",
-    "select2-bootstrap-css": "1.3.1",
     "underscore": "1.6.0"
   }
 }
