--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-autoprefixer": "~0.7.5",
+    "grunt-pleeease": "~0.0.5",
     "grunt-bump": "0.0.14",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
