--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-qunit": "~0.2.1",
-    "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-less": "~0.11.4",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-modernizr": "~0.5.2",
     "grunt-replace": "~0.7.7",
     "jshint-stylish": "~0.2.0"
   }
