--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-replace": "~0.7.7",
+    "grunt-phonegap": "~0.15.2",
     "jshint-stylish": "~0.2.0"
   }
 }
